7-msa/tour-of-heroes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: mariellenolasco/tour-of-heroes-rest:latest
          # reference to my dockerhub repo image
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
# the container port is you defining the docker run -p portYou'reExposing:containerPort
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
    - targetPort: 80
      port: 5001
  # This is the port the service is exposing
  selector:
    app: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 3
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          image: mariellenolasco/tour-of-heroes-angular:latestfix
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  type: LoadBalancer
  ports:
    - targetPort: 80
      port: 4200
  selector:
    app: website
